--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 <span class="note">디자이너 김예진입니다.</span>
                             </h3>
                             <h4>
-                                안녕하세요. 웹 퍼블리셔라는 새로운 분야에 도전하며, 디자인과 창의성으로 가득 찬 세상을 만들어가는 김예진입니다.<br>
+                                안녕하세요. 보다 발전된 디자이너로 거듭나기 위해 새롭게 퍼블리싱에 도전하며 성장하고 있는 김예진입니다.<br>
                                 저는 사용자의 경험을 최우선으로 생각하며, 시각적으로 매력적이고 기능적으로도 불편함이 없는 디자인을 추구합니다.<br>
                                 "발전하되 방전되지 않는" 디자이너로서, 끊임없이 배우고 성장하며 최신 트렌드를 반영한 디자인을 만들어가려고 합니다.
                             </h6>
