--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             </h6>
                             <div class="links">
                                 <a href="https://drive.google.com/file/d/1QbtKqgZjoIJdwl25CCjLU8IOQj7lBeBa/view?usp=sharing" target="_blank">이력서 보기</a>
-                                <a href="https://github.com/yexjinxk" target="_blank">깃허브 보기</a>
+                                <a href="https://github.com/yexjinxk/Portfolio" target="_blank">깃허브 보기</a>
                             </div>
                         </div>
                         <div class="pic">
@@ -424,7 +424,7 @@
                             </ul>
                             <div class="btn-box">
                                 <a href="pj/kiosk/index.html" class="demo-site" target="_blank">키오스크 바로가기</a>
-                                <a href="https://github.com/yexjinxk/kiosk" target="_blank">깃허브 보기</a>
+                                <a href="https://github.com/yexjinxk/Mega_kiosk" target="_blank">깃허브 보기</a>
                             </div>
                         </div>
                     </div>
