--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
     <meta name="msapplication-TileImage" content="imgs/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <link rel="shortcut icon" href="imgs/favicon/favicon2.png">
+    <!-- favicon -->
     <title>김예진-포트폴리오</title>
+    <meta property="og:url" content="https://yexjinxk.github.io/Portfolio/">
+    <meta property="og:title" content="김예진의 포트폴리오">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="imgs/about/meta_image.png"> 
+    <meta property="og:description" content="발전하되 방전되지 않는 디자이너 김예진의 포트폴리오입니다">
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/intro.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
