--- a/index.html
+++ b/index.html
@@ -134,102 +134,104 @@
             </section>
             <section id="about">
                 <h2 class="title">ABOUT ME</h2>
-                <div class="box_wrapper"></div>
-                <div class="about_ct">
-                    <img class="about_img" src="imgs/about/020156617.png" alt="김예진">
-                    <div class="about_txt1">
-                        <div class="about_tit">
-                            <p>PROFILE</p>
-                            <dl>
-                                <dt class="hidden">프로필</dt>
-                                <dd>
-                                    <strong>NAME</strong>김예진
-                                </dd>
-                                <dd>
-                                    <strong>EMAIL</strong>yejin8820@naver.com
-                                </dd>
-                                <dd>
-                                    <strong>ADDRESS</strong>서울시 서대문구 거주
-                                </dd>
-                            </dl>
+                <div class="box_wrapper">
+                    <div class="about_ct">
+                        <img class="about_img" src="imgs/about/020156617.png" alt="김예진">
+                        <div class="about_txt1">
+                            <div class="about_tit">
+                                <p>PROFILE</p>
+                                <dl>
+                                    <dt class="hidden">프로필</dt>
+                                    <dd>
+                                        <strong>NAME</strong>김예진
+                                    </dd>
+                                    <dd>
+                                        <strong>EMAIL</strong>yejin8820@naver.com
+                                    </dd>
+                                    <dd>
+                                        <strong>ADDRESS</strong>서울시 서대문구 거주
+                                    </dd>
+                                </dl>
+                            </div>
+                        </div>
+                        <div class="about_txt2">
+                            <div class="about_tit">
+                                <p>PERSONALITIES</p>
+                                <span>#ESFJ</span>
+                                <span>#섬세한</span>
+                                <span>#긍정적인</span><br>
+                                <span>#계획적인</span>
+                                <span>#책임감있는</span>
+                            </div>
                         </div>
                     </div>
-                    <div class="about_txt2">
-                        <div class="about_tit">
-                            <p>PERSONALITIES</p>
-                            <span>#ESFJ</span>
-                            <span>#섬세한</span>
-                            <span>#긍정적인</span><br>
-                            <span>#계획적인</span>
-                            <span>#책임감있는</span>
+                    <div class="about_ct2">
+                        <div class="about_txt3">
+                            <div class="about_tit">
+                                <p>LICENSE</p>
+                                <dl>
+                                    <dt class="hidden">자격증</dt>
+                                    <dd>
+                                        <strong>2024. 12</strong>웹디자인개발기능사
+                                    </dd>
+                                    <dd>
+                                        <strong>2024. 09</strong>컬러리스트기사(필기합격)
+                                    </dd>
+                                    <dd>
+                                        <strong>2021. 12</strong>그래픽기술자격 GTQ 인디자인 1급
+                                    </dd>
+                                    <dd>
+                                        <strong>2021. 09</strong>그래픽기술자격 GTQ 일러스트 1급
+                                    </dd>
+                                    <dd>
+                                        <strong>2020. 12</strong>그래픽기술자격 GTQ 포토샵 1급
+                                    </dd>
+                                    <dd>
+                                        <strong>2018. 10</strong>1종 보통 운전면허
+                                    </dd>
+                                    <dd>
+                                        <strong>2017. 06</strong>정보기술자격(ITQ)
+                                    </dd>
+                                </dl>
+                            </div>
+                        </div>
+                        <div class="about_txt4">
+                            <div class="about_tit">
+                                <p>EDUCATION/EXPERIENCE</p>
+                                <dl>
+                                    <dt class="hidden">교육/경험사항</dt>
+                                    <dd>
+                                        <strong>2024. 10</strong>UI/UX 반응형 웹디자인 & 웹퍼블리셔(디자인&코딩) 양성과정 수료(760H)
+                                    </dd>
+                                    <dd>
+                                        <strong>2023. 04</strong>(주)지니웍스 컨텐츠 디자이너 근무(1년 근무)
+                                    </dd>
+                                    <dd>
+                                        <strong>2022. 08</strong>디지털패션 솔루션 취창업과정 수료 (120H)
+                                    </dd>
+                                    <dd>
+                                        <strong>2022. 08</strong>패턴디자인 작품전시 [LA Gallery ‘NEW WAVE 2022’展]
+                                    </dd>
+                                    <dd>
+                                        <strong>2022</strong>제 33회 대한민국 텍스타일 디자인대전 [입선]
+                                    </dd>
+                                    <dd>
+                                        <strong>2021</strong>제 32회 대한민국 텍스타일 디자인대전 [특선]
+                                    </dd>
+                                    <dd>
+                                        <strong>2021</strong>제 18회 넥타이디자인 공모전 [장려상]
+                                    </dd>
+                                    <dd>
+                                        <strong>2021</strong>환경그래픽 티셔츠 디자인 공모전 [입선]
+                                    </dd>
+                                    <dd>
+                                        <strong>2020</strong>제 31회 대한민국 텍스타일 디자인대전 [입선]
+                                    </dd>
+                                </dl>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="about_ct2">
-                    <div class="about_txt3">
-                        <div class="about_tit">
-                            <p>LICENSE</p>
-                            <dl>
-                                <dt class="hidden">자격증</dt>
-                                <dd>
-                                    <strong>2024. 12</strong>웹디자인개발기능사
-                                </dd>
-                                <dd>
-                                    <strong>2024. 09</strong>컬러리스트기사(필기합격)
-                                </dd>
-                                <dd>
-                                    <strong>2021. 12</strong>그래픽기술자격 GTQ 인디자인 1급
-                                </dd>
-                                <dd>
-                                    <strong>2021. 09</strong>그래픽기술자격 GTQ 일러스트 1급
-                                </dd>
-                                <dd>
-                                    <strong>2020. 12</strong>그래픽기술자격 GTQ 포토샵 1급
-                                </dd>
-                                <dd>
-                                    <strong>2018. 10</strong>1종 보통 운전면허
-                                </dd>
-                                <dd>
-                                    <strong>2017. 06</strong>정보기술자격(ITQ)
-                                </dd>
-                            </dl>
-                        </div>
-                    </div>
-                    <div class="about_txt4">
-                        <div class="about_tit">
-                            <p>EDUCATION/EXPERIENCE</p>
-                            <dl>
-                                <dt class="hidden">교육/경험사항</dt>
-                                <dd>
-                                    <strong>2024. 10</strong>UI/UX 반응형 웹디자인 & 웹퍼블리셔(디자인&코딩) 양성과정 수료(760H)
-                                </dd>
-                                <dd>
-                                    <strong>2023. 04</strong>(주)지니웍스 컨텐츠 디자이너 근무(1년 근무)
-                                </dd>
-                                <dd>
-                                    <strong>2022. 08</strong>디지털패션 솔루션 취창업과정 수료 (120H)
-                                </dd>
-                                <dd>
-                                    <strong>2022. 08</strong>패턴디자인 작품전시 [LA Gallery ‘NEW WAVE 2022’展]
-                                </dd>
-                                <dd>
-                                    <strong>2022</strong>제 33회 대한민국 텍스타일 디자인대전 [입선]
-                                </dd>
-                                <dd>
-                                    <strong>2021</strong>제 32회 대한민국 텍스타일 디자인대전 [특선]
-                                </dd>
-                                <dd>
-                                    <strong>2021</strong>제 18회 넥타이디자인 공모전 [장려상]
-                                </dd>
-                                <dd>
-                                    <strong>2021</strong>환경그래픽 티셔츠 디자인 공모전 [입선]
-                                </dd>
-                                <dd>
-                                    <strong>2020</strong>제 31회 대한민국 텍스타일 디자인대전 [입선]
-                                </dd>
-                            </dl>
-                        </div>
-                    </div>
             </section>
             <div id="skills">
                 <h2 class="title">SKILLS</h2>
